# threeforce

./: CMakeLists.txt  README.md
include/: geometry.h  shader.h  triangles.h
res/: fragment_shader.glsl  vertex_shader.glsl
src/: geometry.cpp  main.cpp  shader.cpp  triangles.cpp
